08-capstone-observable-llm-platform/kubernetes/manifests/21-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: capstone-ai-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: capstone/worker:local
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 768Mi
