08-capstone-observable-llm-platform/kubernetes/manifests/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-ingress
  namespace: capstone-ai-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: capstone-ai.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - path: /llm(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: llm-service
                port:
                  number: 80
          - path: /rag(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rag-service
                port:
                  number: 80
          - path: /observability(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: observability
                port:
                  number: 80
